# logos-dev-environment

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
contracts/hello_contract/: Cargo.toml
contracts/hello_contract/src/: hello.rs
docker/: logos-dev.Dockerfile
node/dev-node/: Cargo.toml
node/dev-node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
runtime/dev-runtime/: Cargo.toml
runtime/dev-runtime/src/: contracts_config.rs  lib.rs
scripts/: init.sh
