[package]
name = "dev-node"
version = "0.0.1-dev"
description = "Substrate based node for Logos development purposes."
authors = ["LogosLabs <https://github.com/logoslabstech>"]
homepage = "https://logoslabs.io."
repository = "https://github.com/logoslabstech/logos-dev-environment"
license = "Apache-2.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "dev-node"

[dependencies]
# Rust packages
clap =        { workspace = true, features = ["derive"] }
futures =     { workspace = true, features = ["thread-pool"]}
jsonrpsee =   { workspace = true, features = ["server"] }
serde_json =  { workspace = true }

# Substrate client
sc-basic-authorship =         { workspace = true }
sc-cli =                      { workspace = true }
sc-client-api =               { workspace = true }
sc-consensus =                { workspace = true }
sc-consensus-aura =           { workspace = true }
sc-consensus-grandpa =        { workspace = true }
sc-executor =                 { workspace = true }
sc-network =                  { workspace = true }
sc-offchain =                 { workspace = true }
sc-rpc-api =                  { workspace = true }
sc-service =                  { workspace = true }
sc-telemetry =                { workspace = true }
sc-transaction-pool =         { workspace = true }
sc-transaction-pool-api =     { workspace = true }

# Substrate primitives
sp-api =                      { workspace = true }
sp-blockchain =               { workspace = true }
sp-block-builder =            { workspace = true }
sp-core =                     { workspace = true }
sp-consensus-aura =           { workspace = true }
sp-consensus-grandpa =        { workspace = true }
sp-inherents =                { workspace = true }
sp-io =                       { workspace = true }
sp-keyring =                  { workspace = true }
sp-runtime =                  { workspace = true }
sp-timestamp =                { workspace = true }
substrate-frame-rpc-system =  { workspace = true }
try-runtime-cli =             { workspace = true, optional = true }

# Substrate pallets
frame-benchmarking =              { workspace = true }
frame-benchmarking-cli =          { workspace = true }
frame-system =                    { workspace = true }
pallet-contracts =                { workspace = true }
pallet-transaction-payment =      { workspace = true }
pallet-transaction-payment-rpc =  { workspace = true }

# Local Dependencies
dev-runtime = 	{ workspace = true }

[build-dependencies]
substrate-build-script-utils =	{ workspace = true }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"dev-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"dev-runtime/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]	